update superset service & superset config

--- a/docker/.env
+++ b/docker/.env
@@ -18,7 +18,7 @@ COMPOSE_PROJECT_NAME=superset
 
 # database configurations (do not modify)
 DATABASE_DB=superset
-DATABASE_HOST=db
+DATABASE_HOST=superset-db
 DATABASE_PASSWORD=superset
 DATABASE_USER=superset
 
@@ -36,7 +36,7 @@ POSTGRES_PASSWORD=superset
 
 # Add the mapped in /app/pythonpath_docker which allows devs to override stuff
 PYTHONPATH=/app/pythonpath:/app/docker/pythonpath_dev
-REDIS_HOST=redis
+REDIS_HOST=superset-redis
 REDIS_PORT=6379
 
 FLASK_ENV=development
