--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,11 +14,11 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
-x-superset-image: &superset-image apache/superset:1.3.0
+x-superset-image: &superset-image registry.gitlab.motherapp.com/powerarena/powerarena-superset:0.1
 x-superset-user: &superset-user root
 x-superset-depends-on: &superset-depends-on
-  - db
-  - redis
+  - superset-db
+  - superset-redis
 x-superset-volumes: &superset-volumes
   # /app/pythonpath_docker will be appended to the PYTHONPATH in the final container
   - ./docker:/app/docker
@@ -31,7 +31,7 @@ x-superset-volumes: &superset-volumes
 
 version: "3.7"
 services:
-  redis:
+  superset-redis:
     image: redis:latest
     container_name: superset_cache
     restart: unless-stopped
@@ -40,7 +40,7 @@ services:
     volumes:
       - redis:/data
 
-  db:
+  superset-db:
     env_file: docker/.env
     image: postgres:10
     container_name: superset_db
@@ -71,7 +71,7 @@ services:
     ports:
       - 28080:8080
     depends_on:
-      - redis
+      - superset-redis
     # Mount everything in superset-websocket into container and
     # then exclude node_modules and dist with bogus volume mount.
     # This is necessary because host and container need to have
